# Laboratory

./: README.md
.github/workflows/: build.yml
Laba1/: CMakeLists.txt  README.md
Laba1/Laba1/: application.cpp  application.h  date.cpp  date.h  employee.cpp  employee.h  main.cpp
Laba1/Laba1/Source/: addition_input.cpp  date.cpp  utilities.cpp
Laba1/Laba1/h/: addition_input.h
Laba1/header/: application.h  date.h  employee.h  utilities.h
Laba1/src/: application.cpp  date.cpp  employee.cpp  main.cpp  utilities.cpp
Laba2/: README.md  Readme.md
Laba2/Laba2/: String.cpp  String.h  Utilities.cpp  main.cpp
Laba2/Laba2/Header/: String.h  Utilities.h
Laba2/Laba2/Source/: String.cpp  Utilities.cpp  main.cpp
Laba2/header/: String.h  utilities.h
Laba2/src/: String.cpp  main.cpp  utilities.cpp
